# PatternRecognition

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: analysis.ipynb
scripts/: comprehensive_evaluation.py  download_dataset.py  evaluate.py  train_patchcore.py  train_traditional.py
src/deep_learning/: patchcore.py
src/evaluation/: metrics.py
src/traditional/: detector.py  features.py
src/utils/: visualization.py
