[project]
name = "industrial-defect-detection"
version = "0.1.0"
description = "基于MVTec AD数据集的工业缺陷检测系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "anomalib>=1.0.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "joblib>=1.3.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
